# api/api-spec.json
@@ -42,14 +42,7 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SuccessResponse"
-                }
-              }
-            }
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request",
@@ -82,6 +75,19 @@
                   "type": "array",
                   "items": {
                     "$ref": "#/components/schemas/LogMessage"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResultProblem"
                   }
                 }
               }
@@ -129,8 +135,9 @@
         },
         "nullable": true
       },
-      "IPath": {
-        "type": "string"
+      "IPath": { },
+      "IPath2": {
+        "nullable": true
       },
       "LogLevel": {
         "type": "integer"
@@ -153,7 +160,7 @@
             "type": "string"
           },
           "sourcePath": {
-            "$ref": "#/components/schemas/IPath"
+            "$ref": "#/components/schemas/IPath2"
           },
           "sourceLine": {
             "type": "integer",
@@ -233,15 +240,6 @@
         "properties": {
           "command": {
             "type": "string"
-          }
-        }
-      },
-      "SuccessResponse": {
-        "type": "object",
-        "properties": {
-          "success": {
-            "type": "boolean",
-            "default": true
           }
         }
       }
