# backend/SuccessResponse.cs
@@ -1,3 +1,0 @@
-namespace Olve.Trains.UI.Server;
-
-public sealed record SuccessResponse(bool Success = true);
